--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     section {
     padding: 0px 0px;
-    max-width: 750px;
+    max-width: auto;
     margin: auto;
     }
 
@@ -191,45 +191,53 @@
 
     /* STEP SECTION */
     .steps-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 30px;
-      padding: 60px 520px;
-      background-color: #f7b1c6;
-      text-align: center;
+    width: 100%;
+    padding: 60px 20px;
+    background-color: #f7b1c6;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 30px;
+    text-align: center;
+    box-sizing: border-box;
     }
 
     .step-box {
-      background-color: transparent;
-      padding: 10px;
-      border-radius: 10px;
-      transition: transform 0.3s ease;
-      height: 300px;
-      display: flex;
-      flex-direction: column;
+    width: 200px;
+    height: 360px;
+    background-color: transparent;
+    padding: 20px;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
     }
 
     .step-box img {
       width: 100%;
-      height: 220px;
+      height: 200px;
       object-fit: cover;
       border-radius: 10px;
     }
 
     .step-box h3 {
-      margin-top: 10px;
       font-size: 16px;
-      font-weight: bold;
+      margin: 10px 0 5px;
     }
 
     .step-box p {
       font-size: 14px;
       color: #000;
+      margin: 0;
     }
 
     .step-box:hover {
       transform: scale(1.05);
     }
+
 
     /* BENEFITS SECTION */
     .benefits-section {
