--- a/index.html
+++ b/index.html
@@ -192,18 +192,19 @@
     /* STEP SECTION */
     .steps-section {
     width: 100%;
-    padding: 60px 20px;
-    background-color: #f7b1c6;
+    padding: 360px 0px;
+    background-color: #f7b1c6 no-repeat center;
+    background-size: cover;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    gap: 30px;
+    gap: 95px;
     text-align: center;
     box-sizing: border-box;
     }
 
     .step-box {
-    width: 200px;
+    width: 230px;
     height: 360px;
     background-color: transparent;
     padding: 20px;
@@ -218,7 +219,7 @@
 
     .step-box img {
       width: 100%;
-      height: 200px;
+      height: 270px;
       object-fit: cover;
       border-radius: 10px;
     }
@@ -331,22 +332,22 @@
 
   <section id="how" class="steps-section">
     <div class="step-box">
-      <img src="APPLY.jpg" alt="Apply GLOSSTALK">
+      <img src="APPLY.png" alt="Apply GLOSSTALK">
       <h3>STEP 1</h3>
       <p>Apply GLOSSTALK like regular lipstick</p>
     </div>
     <div class="step-box">
-      <img src="APPLY2.jpg" alt="Speak your language">
+      <img src="APPLY2.png" alt="Speak your language">
       <h3>STEP 2</h3>
       <p>Speak in your language</p>
     </div>
     <div class="step-box">
-      <img src="APPLY3.jpg" alt="Translated instantly">
+      <img src="APPLY3.png" alt="Translated instantly">
       <h3>STEP 3</h3>
       <p>Your words are translated instantly!</p>
     </div>
     <div class="step-box">
-      <img src="APPLY4.jpg" alt="Understand and respond">
+      <img src="APPLY4.png" alt="Understand and respond">
       <h3>STEP 4</h3>
       <p>Understand and respond in real-time</p>
     </div>
